add margin auto al modal

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,120 +1,113 @@
+
 .body__home {
-    background-color: #F2F9FF;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-
-    dialog {
-        position: fixed;
-        top: 20%;
-        left: 25%;
-        border: 1px solid #263238;
-
-        .popup_cv {
-            display: flex;
-            flex-direction: row;
-            padding: 42px 45px;
-            gap: 40px;
-            background: #FFF;
-
-            .conten_uno_popup {
+        dialog {
+            margin: auto;
+            border: 1px solid #263238;
+            .popup_cv {
                 display: flex;
-                flex-direction: column;
-                gap: 37px;
+                flex-direction: row;
+                padding: 42px 45px;
+                gap: 40px;
+                background: #ffffff;
 
-                .conten_titulo_popupcv {
+                .conten_uno_popup {
                     display: flex;
                     flex-direction: column;
-                    width: 286px;
-                    height: 100%;
-                    gap: 0.5em;
+                    gap: 37px;
 
-                    h2 {
-                        color: #263238;
-                        font-family: Sora;
-                        font-size: 35px;
-                        font-style: normal;
-                        font-weight: 700;
-                        line-height: 107.5%;
-                        letter-spacing: 0.35px;
-                    }
-
-                    p {
-                        color: #263238;
-                        font-family: Sora;
-                        font-size: 13px;
-                        font-style: normal;
-                        font-weight: 300;
-                        line-height: 107.5%;
-                        letter-spacing: 0.13px;
-                    }
-
-                }
-
-                .conten_boton_input_popupcv {
-                    display: flex;
-                    width: 100%;
-                    flex-direction: column;
-                    gap: 15px;
-
-                    input {
+                    .conten_titulo_popupcv {
                         display: flex;
-                        padding: 12px;
-                        align-items: center;
-                        gap: 10px;
-                        color: #263238;
-                        font-family: Sora;
-                        font-size: 15px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: 107.5%;
-                        letter-spacing: 0.15px;
+                        flex-direction: column;
+                        width: 286px;
+                        height: 100%;
+                        gap: 0.5em;
+
+                        h2 {
+                            color: #263238;
+                            font-family: Sora;
+                            font-size: 35px;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: 107.5%;
+                            letter-spacing: 0.35px;
+                        }
+
+                        p {
+                            color: #263238;
+                            font-family: Sora;
+                            font-size: 13px;
+                            font-style: normal;
+                            font-weight: 300;
+                            line-height: 107.5%;
+                            letter-spacing: 0.13px;
+                        }
+
                     }
 
-                    .botoncv {
-                        top: 0px;
-                        right: 0px;
-                        position: relative;
-                        color: #FFF;
-                        font-family: Sora;
+                    .conten_boton_input_popupcv {
+                        display: flex;
                         width: 100%;
-                        font-size: 15px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: 107.5%;
-                        padding: 10px 0em;
-                        justify-content: center;
-                        align-items: center;
-                        gap: 10px;
-                        border: 1px solid #19232D;
-                        background: #00C187;
-                        box-shadow: 2px 2px 0px 0px #000;
-                        cursor: url("../assets/img/flecha1.svg") 12 12, auto;
+                        flex-direction: column;
+                        gap: 15px;
+
+                        input {
+                            display: flex;
+                            padding: 12px;
+                            align-items: center;
+                            gap: 10px;
+                            color: #263238;
+                            font-family: Sora;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 107.5%;
+                            letter-spacing: 0.15px;
+                        }
+
+                        .botoncv {
+                            top: 0px;
+                            right: 0px;
+                            position: relative;
+                            color: #FFF;
+                            font-family: Sora;
+                            width: 100%;
+                            font-size: 15px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 107.5%;
+                            padding: 10px 0em;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 10px;
+                            border: 1px solid #19232D;
+                            background: #00C187;
+                            box-shadow: 2px 2px 0px 0px #000;
+                            cursor: url("../assets/img/flecha1.svg") 12 12, auto;
+                        }
                     }
                 }
+
+                .conten_dos_popup {
+                    border-bottom: 1px solid #263238;
+                }
+
             }
 
-            .conten_dos_popup {
-                border-bottom: 1px solid #263238;
+            button {
+                z-index: 9;
+                border: 0px solid #263238;
+                background: #FFFFFF;
+                position: absolute;
+                right: 10px;
+                top: 10px;
             }
 
         }
-
-        button {
-            z-index: 9;
-            border: 0px solid #263238;
-            background: #FFFFFF;
-            position: absolute;
-            right: 10px;
-            top: 10px;
-        }
-
-    }
-
 }
 
 
 dialog::backdrop {
+    margin: 0px;
     background: rgba(0, 0, 0, 0.39);
     backdrop-filter: blur(9.5px);
 }
@@ -542,35 +535,28 @@ dialog::backdrop {
 @media (max-width: 1100px) {
 
     .body__home {
-        background-color: #F2F9FF;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-start;
-
         dialog {
-            position: fixed;
-            top: 10vh;
-            left: 10vw;
+            margin: auto;
             border: 1px solid #263238;
             .popup_cv {
                 display: flex;
                 flex-direction: column-reverse;
                 padding: 42px 45px;
                 gap: 40px;
-                background: #FFF;
-    
+                background: #ffffff;
+
                 .conten_uno_popup {
                     display: flex;
                     flex-direction: column;
                     gap: 37px;
-    
+
                     .conten_titulo_popupcv {
                         display: flex;
                         flex-direction: column;
                         width: 286px;
                         height: 100%;
                         gap: 0.5em;
-    
+
                         h2 {
                             color: #263238;
                             font-family: Sora;
@@ -580,7 +566,7 @@ dialog::backdrop {
                             line-height: 107.5%;
                             letter-spacing: 0.35px;
                         }
-    
+
                         p {
                             color: #263238;
                             font-family: Sora;
@@ -590,15 +576,15 @@ dialog::backdrop {
                             line-height: 107.5%;
                             letter-spacing: 0.13px;
                         }
-    
+
                     }
-    
+
                     .conten_boton_input_popupcv {
                         display: flex;
                         width: 100%;
                         flex-direction: column;
                         gap: 15px;
-    
+
                         input {
                             display: flex;
                             padding: 12px;
@@ -612,7 +598,7 @@ dialog::backdrop {
                             line-height: 107.5%;
                             letter-spacing: 0.15px;
                         }
-    
+
                         .botoncv {
                             top: 0px;
                             right: 0px;
@@ -635,13 +621,13 @@ dialog::backdrop {
                         }
                     }
                 }
-    
+
                 .conten_dos_popup {
                     border-bottom: 1px solid #263238;
                 }
-    
+
             }
-    
+
             button {
                 z-index: 9;
                 border: 0px solid #263238;
@@ -650,10 +636,9 @@ dialog::backdrop {
                 right: 10px;
                 top: 10px;
             }
-    
-        }
 
-    }
+        }
+}
 
 
     .header__home_a {
