--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -5,8 +5,8 @@ $coloron:#000000;
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     cursor: url("../assets/img/cursor.svg") 12 12, auto;
 }
