--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,5 +1,5 @@
-
 .body__home {
+    background: #ffffff ;
         dialog {
             margin: auto;
             border: 1px solid #263238;
@@ -88,7 +88,9 @@
                 }
 
                 .conten_dos_popup {
-                    border-bottom: 1px solid #263238;
+                    .lottie-player{
+                        border-bottom: 1px solid #263238;
+                    }
                 }
 
             }
@@ -104,8 +106,6 @@
 
         }
 }
-
-
 dialog::backdrop {
     margin: 0px;
     background: rgba(0, 0, 0, 0.39);
@@ -123,7 +123,7 @@ dialog::backdrop {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #19232D;
-    background: #F2F9FF;
+    background: #ffffff;
     width: 100%;
 
     .icono-menu {
@@ -553,18 +553,19 @@ dialog::backdrop {
                     .conten_titulo_popupcv {
                         display: flex;
                         flex-direction: column;
-                        width: 286px;
+                        width: 100%;
                         height: 100%;
                         gap: 0.5em;
 
                         h2 {
                             color: #263238;
                             font-family: Sora;
-                            font-size: 35px;
+                            font-size:40px;
                             font-style: normal;
                             font-weight: 700;
                             line-height: 107.5%;
                             letter-spacing: 0.35px;
+                            text-align: center;
                         }
 
                         p {
@@ -575,6 +576,7 @@ dialog::backdrop {
                             font-weight: 300;
                             line-height: 107.5%;
                             letter-spacing: 0.13px;
+                            text-align: center;
                         }
 
                     }
@@ -623,7 +625,6 @@ dialog::backdrop {
                 }
 
                 .conten_dos_popup {
-                    border-bottom: 1px solid #263238;
                 }
 
             }
@@ -633,8 +634,8 @@ dialog::backdrop {
                 border: 0px solid #263238;
                 background: #FFFFFF;
                 position: absolute;
-                right: 10px;
-                top: 10px;
+                right: 15px;
+                top: 15px;
             }
 
         }
@@ -652,7 +653,7 @@ dialog::backdrop {
         align-items: center;
 
         border-bottom: 1px solid #19232D;
-        background: #F2F9FF;
+        background: #ffffff;
         width: 100%;
 
         .icono-menu {
