--- a/style/sass.css
+++ b/style/sass.css
@@ -322,7 +322,7 @@ body::-webkit-scrollbar-thumb {
   position: fixed;
   width: 50px;
   height: 50px;
-  bottom: 50px;
+  bottom: 25px;
   right: 25px;
   z-index: 1;
 }
@@ -588,6 +588,9 @@ p {
   margin-bottom: 0px;
 }
 
+.body__home {
+  background: #ffffff;
+}
 .body__home dialog {
   margin: auto;
   border: 1px solid #263238;
@@ -668,7 +671,7 @@ p {
   box-shadow: 2px 2px 0px 0px #000;
   cursor: url("../assets/img/flecha1.svg") 12 12, auto;
 }
-.body__home dialog .popup_cv .conten_dos_popup {
+.body__home dialog .popup_cv .conten_dos_popup .lottie-player {
   border-bottom: 1px solid #263238;
 }
 .body__home dialog button {
@@ -697,7 +700,7 @@ dialog::backdrop {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #19232D;
-  background: #F2F9FF;
+  background: #ffffff;
   width: 100%;
 }
 .header__home_a .icono-menu {
@@ -1067,18 +1070,19 @@ dialog::backdrop {
   .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv {
     display: flex;
     flex-direction: column;
-    width: 286px;
+    width: 100%;
     height: 100%;
     gap: 0.5em;
   }
   .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv h2 {
     color: #263238;
     font-family: Sora;
-    font-size: 35px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 107.5%;
     letter-spacing: 0.35px;
+    text-align: center;
   }
   .body__home dialog .popup_cv .conten_uno_popup .conten_titulo_popupcv p {
     color: #263238;
@@ -1088,6 +1092,7 @@ dialog::backdrop {
     font-weight: 300;
     line-height: 107.5%;
     letter-spacing: 0.13px;
+    text-align: center;
   }
   .body__home dialog .popup_cv .conten_uno_popup .conten_boton_input_popupcv {
     display: flex;
@@ -1128,16 +1133,13 @@ dialog::backdrop {
     box-shadow: 2px 2px 0px 0px #000;
     cursor: url("../assets/img/flecha1.svg") 12 12, auto;
   }
-  .body__home dialog .popup_cv .conten_dos_popup {
-    border-bottom: 1px solid #263238;
-  }
   .body__home dialog button {
     z-index: 9;
     border: 0px solid #263238;
     background: #FFFFFF;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 15px;
+    top: 15px;
   }
   .header__home_a {
     position: fixed;
@@ -1149,7 +1151,7 @@ dialog::backdrop {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #19232D;
-    background: #F2F9FF;
+    background: #ffffff;
     width: 100%;
   }
   .header__home_a .icono-menu {
